--- a/Admin/package.json
+++ b/Admin/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.20",
     "@mui/x-data-grid": "^6.18.4",
     "axios": "^1.6.2",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
